// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider default 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="p-divider p-component p-divider-horizontal p-divider-solid p-divider-left"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="justify-content: center;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider horizontal center 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="p-divider p-component p-divider-horizontal p-divider-solid p-divider-center"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="justify-content: center;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider horizontal left 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="p-divider p-component p-divider-horizontal p-divider-solid p-divider-left"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="justify-content: flex-start;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider horizontal right 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="p-divider p-component p-divider-horizontal p-divider-solid p-divider-right"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="justify-content: flex-end;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider type dashed 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="p-divider p-component p-divider-horizontal p-divider-dashed p-divider-left"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="justify-content: center;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider type dotted 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="p-divider p-component p-divider-horizontal p-divider-dotted p-divider-left"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="justify-content: center;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider vertical bottom 1`] = `
<div>
  <div
    aria-orientation="vertical"
    class="p-divider p-component p-divider-vertical p-divider-solid p-divider-bottom"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="align-items: flex-end;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider vertical center 1`] = `
<div>
  <div
    aria-orientation="vertical"
    class="p-divider p-component p-divider-vertical p-divider-solid p-divider-center"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="align-items: center;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;

exports[`Divider vertical top 1`] = `
<div>
  <div
    aria-orientation="vertical"
    class="p-divider p-component p-divider-vertical p-divider-solid p-divider-top"
    data-pc-name="divider"
    data-pc-section="root"
    role="separator"
    style="align-items: flex-start;"
  >
    <div
      class="p-divider-content"
      data-pc-section="content"
    />
  </div>
</div>
`;
